--- a/articles/genomics/TOC.yml
+++ b/articles/genomics/TOC.yml
@@ -25,6 +25,8 @@
       href: frequently-asked-questions-genomics.md
     - name: Felsökningsguide
       href: troubleshooting-guide-genomics.md
+    - name: Skicka in en supportbegäran
+      href: file-support-ticket-genomics.md
     - name: Versionshistorik
       href: version-release-history-genomics.md
     - name: Verksamhetskontinuitet
